@@ -1,16 +1,5 @@
 <?php
 
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
-
-/**
- * Description of GameState
- *
- * @author Victor
- */
 class GameState extends CI_Model {
 
     //makes the variables for the gamestate
@@ -29,10 +18,10 @@ class GameState extends CI_Model {
         $string = $this->curl->simple_get('http://ken-botcards.azurewebsites.net/status');
 
         $xml = simplexml_load_string($string);
-            $this->code = (int) $xml->state;
-            $this->round = (int) $xml->round;
-            $this->countdown = (int) $xml->countdown;
-            $this->status = 1;
+        $this->code = (int) $xml->state;
+        $this->round = (int) $xml->round;
+        $this->countdown = (int) $xml->countdown;
+        $this->status = 1;
     }
 
     //returns the game status
@@ -40,18 +29,21 @@ class GameState extends CI_Model {
         return $this->status;
     }
 
-        //returns the game code
+    //returns the game code
     public function get_code() {
         return $this->code;
     }
+
     //returns the round
     public function get_round() {
         return $this->round;
     }
+
     //returns the time left in the round
     public function get_countdown() {
         return $this->countdown;
     }
+
     //figures out what the state is based on the code
     public function get_state() {
         switch ($this->code) {
@@ -78,3 +70,6 @@ class GameState extends CI_Model {
     }
 
 }
+
+/* End of file GameState.php */
+/* Location: application/controllers/GameState.php */
