@@ -1,9 +1,9 @@
 <h1>Bot assembly page</h1>
 
 <p>This page will provide you options to design your bot.
-  <div> 
-      Players can choose the three pieces to make a completed
-      bot with. Don't forget to click on "assemble" after your choice </div>
+<div> 
+    Players can choose the three pieces to make a completed
+    bot with. Don't forget to click on "assemble" after your choice </div>
 <br/>
 <form method="post" action="/assemble">
 
@@ -16,10 +16,10 @@
     <input type="submit" value="Assemble">
 </form>
 
-    <img src="../assets/{head}.png">
-    <br>
-    <img src="../assets/{body}.png">
-    <br>
-    <img src="../assets/{legs}.png">
+<img src="../assets/{head}.png">
+<br>
+<img src="../assets/{body}.png">
+<br>
+<img src="../assets/{legs}.png">
 
 <br>
