@@ -2,7 +2,7 @@
 
 <form action="/register/create_user" method="post">
 
-   Desired Username:  <input type="text" name="username"><br>
+    Desired Username:  <input type="text" name="username"><br>
     Desired Password:        <input type="password" name="password"/>
-         <br><input type="submit" value="Register now">
-                        </form>
+    <br><input type="submit" value="Register now">
+</form>
