@@ -1,7 +1,7 @@
 <h3>Heads</h3>
 <select name="head">
-            <option>Select a Part</option>
-            {collections}            
-                <option value="{Piece}">{Piece}</option>
-            {/collections}
+    <option>Select a Part</option>
+    {collections}            
+    <option value="{Piece}">{Piece}</option>
+    {/collections}
 </select>
