@@ -1,7 +1,7 @@
 <h3>Legs</h3>
 <select name="legs">
-            <option>Select a Part</option>
-            {collections}            
-                <option value="{Piece}" name="legs">{Piece}</option>
-            {/collections}
+    <option>Select a Part</option>
+    {collections}            
+    <option value="{Piece}" name="legs">{Piece}</option>
+    {/collections}
 </select>
