@@ -1,11 +1,9 @@
-
-
 <form action="/homepage/login/submit" method="post">
 
-   Username:  <input type="text" name="username"><br>
+    Username:  <input type="text" name="username"><br>
     Password:        <input type="password" name="password"/>
-         <br><input type="submit" value='Login'>
-         
-      <a href="/register">Register</a>
-      <a href="/admin/login">Admin Login</a>
-                        </form>
+    <br><input type="submit" value='Login'>
+
+    <a href="/register">Register</a>
+    <a href="/admin/login">Admin Login</a>
+</form>
