@@ -1,14 +1,13 @@
-
 <div id="players">
     <p>List of Players:</p>
     <table>
         <tr><td>Player</td><td>Peanuts</td><td>Equity</td>
-    {players}
-    <tr>
-        <td><a href="/portfolio?name={Player}" a>{Player}</a></td>
-        <td>{Peanuts}</td>
-        <td>{Equity}</td>
-    </tr>
-    {/players}
+            {players}
+        <tr>
+            <td><a href="/portfolio?name={Player}" a>{Player}</a></td>
+            <td>{Peanuts}</td>
+            <td>{Equity}</td>
+        </tr>
+        {/players}
     </table>
 </div>
