@@ -1,9 +1,8 @@
-
 <div id="gameStatus">
     <p>Game Status:</p>
     <table>
         <tr><td>TokenID</td><td>Piece</td><td>Player</td></tr>
-            {collections}
+        {collections}
         <tr>
             <td>{Token}</td>
             <td>{Piece}</td>
